# ESP32AzureKit_FallDetection_server

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  sdkconfig
main/: .cproject  CMakeLists.txt  Soluzioni Esercitazioni.code-workspace  bt_functions.c  button.c  main.c  sensors.c  ssd1306.c  ssd1306.h
